--- a/blog-samuel.html
+++ b/blog-samuel.html
@@ -1,11 +1,11 @@
 
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>Samuel ESpinoza</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <p>pagina chida en proceso de creacion</p>
     </body>
 </html>
