samuel es guapo

--- a/blog-samuel.html
+++ b/blog-samuel.html
@@ -8,6 +8,7 @@
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>pagina chida en proceso de creacion
             aprendiendo git
+            samuel es muy muy guapo 
         </p>
     </body>
 </html>
